# cargo

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  COPYRIGHT_NOTICE  README.md
cli/: CMakeLists.txt  cargoctl.in  copy.cpp  ftio.cpp  ping.cpp  shaping.cpp  shutdown.cpp
cmake/: FindArgobots.cmake  FindDataClay.cmake  FindExpand.cmake  FindGekkoFS.cmake  FindHercules.cmake  FindMargo.cmake  FindMercury.cmake  cargo-config.cmake.in  cargo-utils.cmake  systemd.cmake
docker/0.2.0-wip/: Dockerfile
docker/0.3.0/: Dockerfile
etc/: CMakeLists.txt  cargo.conf.in
lib/: CMakeLists.txt  cargo.hpp  error.cpp  fmt_formatters.hpp  libcargo.cpp
lib/cargo/: error.hpp
scripts/: runner.sh
spack/: repo.yaml
src/: CMakeLists.txt  boost_serialization_std_optional.hpp  cargo.cpp  env.hpp  master.cpp  master.hpp  message.hpp  mpioxx.hpp  parallel_request.cpp  parallel_request.hpp  request.cpp  request.hpp  request_manager.cpp  request_manager.hpp  shared_mutex.hpp  version.hpp.in  worker.cpp  worker.hpp
src/config/: CMakeLists.txt
src/config/config/: CMakeLists.txt  config.hpp  defaults.cpp.in  defaults.hpp  genopts.yml.in  parsers.cpp  parsers.hpp  settings.cpp  settings.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.h  logger.hpp  macros.h
src/logger/logger/: CMakeLists.txt  logger.hpp
src/net/: CMakeLists.txt  client.cpp  client.hpp  endpoint.cpp  endpoint.hpp  request.hpp  serialization.hpp  server.cpp  server.hpp  signal_listener.hpp  utilities.hpp
src/net/net/: CMakeLists.txt  server.cpp  server.hpp
src/posix_file/: CMakeLists.txt
src/posix_file/posix_file/: file.hpp  math.hpp  ranges.hpp  types.hpp  views.hpp
src/posix_file/posix_file/fs_plugin/: dataclay_plugin.cpp  dataclay_plugin.hpp  expand_plugin.cpp  expand_plugin.hpp  fs_plugin.cpp  fs_plugin.hpp  gekko_plugin.cpp  gekko_plugin.hpp  hercules_plugin.cpp  hercules_plugin.hpp  none_plugin.cpp  none_plugin.hpp  posix_plugin.cpp  posix_plugin.hpp
src/posix_file/posix_file/views/: block_iterator.hpp  strided_iterator.hpp
src/proto/mpi/: message.hpp
src/proto/rpc/: response.hpp
src/utils/: CMakeLists.txt
src/utils/utils/: CMakeLists.txt  ctype_ptr.hpp  signal_listener.hpp  utils.cpp  utils.hpp
src/worker/: memory.hpp  mpio_read.cpp  mpio_read.hpp  mpio_write.cpp  mpio_write.hpp  ops.cpp  ops.hpp  seq_mixed.cpp  seq_mixed.hpp  sequential.cpp  sequential.hpp  worker.cpp  worker.hpp
systemd/: CMakeLists.txt  cargo@.service.in
tests/: CMakeLists.txt  common.cpp  common.hpp  posix_file_tests.cpp  tests.cpp
util/: CMakeLists.txt  copy.cpp
